@@ -274,10 +274,6 @@ of output from a command is more than this. The default is 20. Setting it
 explicitly to 0 will disable paging. 
   SET/PAGE 30
   SET/PAGE 0
-
-=== 0^SHOW/PROGRAM^Show the locations of all the included program modules
-Show the name and location where every program module was load from. This
-is useful for checking where you think you have loaded a .pm file from. 
  
 === 9^SET/PRIVILEGE <n> <call> [<call..]^Set privilege level on a call
 Set the privilege level on a callsign. The privilege levels that pertain
@@ -292,6 +288,11 @@ to commands are as default:-
 If you are a sysop and you come in as a normal user on a remote connection
 your privilege will automatically be set to 0.
 
+=== 9^SET/PASSWORD <callsign> <string>^Set a users password
+The password for a user can only be set by a full sysop. The string can contain
+any characters but any spaces are removed (you can type in spaces - but they
+won't appear in the password). You can see the result with STAT/USER.
+ 
 === 0^SET/QRA <locator>^Set your QRA locator
 === 9^SET/SYS_QRA <locator>^Set your cluster QRA locator
 Tell the system what your QRA (or Maidenhead) locator is. If you have not
@@ -361,6 +362,10 @@ together with the internal country no, the CQ and ITU regions.
 
 See also SHOW/DXCC
 
+=== 0^SHOW/PROGRAM^Show the locations of all the included program modules
+Show the name and location where every program module was load from. This
+is useful for checking where you think you have loaded a .pm file from. 
+
 === 0^SHOW/WWV^Show last 10 WWV broadcasts
 === 0^SHOW/WWV <n>^Show last <n> WWV broadcasts
 Display the most recent WWV information that has been received by the system
@@ -379,6 +384,28 @@ Shows the full contents of a user record including all the secret flags
 and stuff.
 
 Only the fields that are defined (in perl term) will be displayed.
+
+=== 0^SYSOP^Regain your privileges if you login remotely
+The system automatically reduces your privilege level to that of a normal user 
+if you login in remotely. This command allows you to regain your normal privilege
+level. It uses the normal system: five numbers are returned that are indexes into 
+the character array that is your assigned password (see set/password). The indexes
+start from zero. 
+
+You are expected to return a string which contains the characters required in the
+correct order. You may intersperse those characters with others to obscure your 
+reply for any watchers. For example (and these values are for explanation :-):
+
+password = 012345678901234567890123456789
+ > sysop
+22 10 15 17 3
+you type:-
+aa2bbbb0ccc5ddd7xxx3n
+or 2 0 5 7 3
+or 20573
+
+They will all match. If there is no password you will still be offered numbers but
+nothing will happen when you input a string. Any match is case sensitive.
 
 === 0^TALK <call> <text>^Send a text message to another station
 === 0^TALK <call> > <node> <text>^Send a text message to another station via a node
