@@ -104,6 +104,7 @@ package DXM;
 				shutting => '$main::mycall shutting down...',
 				sloc => 'Cluster lat $_[0] long $_[1], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
 				sqra => 'Cluster QRA Locator$_[0], DON\'T FORGET TO CHANGE YOUR DXVars.pm',
+				sorry => 'Sorry',
 				talks => 'Talk flag set on $_[0]',
 				talku => 'Talk flag unset on $_[0]',
 				usernf => '*** User record for $_[0] not found ***',
